# trustee

./: Cargo.toml
.tekton/: trustee-pull-request.yaml  trustee-push.yaml
attestation-service/src/ear_token/: ear_default_policy_cpu.rego
examples/secret_prov/: Cargo.toml
examples/secret_prov/gramine/busybox/: Makefile  README.md  busybox.manifest.template
examples/secret_prov/src/: lib.rs
kbs/: Cargo.toml  Makefile
kbs/config/kubernetes/base/: kustomization.yaml  policy.rego
kbs/config/kubernetes/ita/: add_ita_token_certs.yaml  intel-trust-authority-certs.txt  kbs-config.toml  kustomization.yaml
kbs/docker/rhel-ubi/: Dockerfile
kbs/docs/: config.md
kbs/src/: api_server.rs
kbs/src/api/src/attestation/: mod.rs
kbs/src/api/src/attestation/coco/: builtin.rs  grpc.rs
kbs/src/api/src/token/: coco.rs
kbs/src/attestation/: mod.rs
kbs/src/attestation/coco/: builtin.rs  grpc.rs
kbs/src/attestation/intel_trust_authority/: mod.rs
kbs/tools/client/: Cargo.toml
rpm/: redhat.repo  rpms.in.yaml  rpms.lock.yaml  ubi.repo
